# AI-Statistician

./: .gitignore  README.md  StatInference.lean  lake-manifest.json  lakefile.lean  lean-toolchain  pyproject.toml
benchmarks/: README.md  seeds.jsonl
config/: agents.yaml  statlean_blueprint.json  training.toml
docs/: agent_operating_loop.md  architecture.md  axle_integration.md  axle_integration_assessment.md  benchmark_design.md  curation_policy.md  empirical_process_blueprint_augmentation.md  formalization_semantic_audit.md  meta_instruction.md  paper_draft.md  research_assessment.md  roadmap.md  training_plan.md  vdvw_markdown_extraction_assessment.md  worktree_strategy.md
schemas/: ablation_report.schema.json  baseline_comparison.schema.json  benchmark_task.schema.json  concrete_estimator_chain.schema.json  curated_lemma_ledger.schema.json  empirical_process_external_slice.schema.json  empirical_process_targets.schema.json  eval_report.schema.json  external_baseline_plan.schema.json  external_baseline_results.schema.json  grpo_process_task.schema.json  lean_task.schema.json  lemma_non_vacuity_report.schema.json  lemma_proof_cost_report.schema.json  lemma_proposal.schema.json  lemma_proposal_gate_report.schema.json  paper_quality_heldout.schema.json  premise_record.schema.json  proof_attempt.schema.json  reproducibility_bundle.schema.json  stat_claim.schema.json  theorem_hole_promotion_queue.schema.json  training_manifest.schema.json  vdvw_bracketing_gc_statement_candidates.schema.json  vdvw_primitive_empirical_semantics.schema.json  (+3 more)
scripts/: bootstrap_repo.py  (+1 more)
(+73 files in other folders)
